Update fonts to be loaded from https

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Ubuntu:400,700);
+@import url(https://fonts.googleapis.com/css?family=Ubuntu:400,700);
 body {
   background-image: url('../img/colorPulse_V4.jpg');
   background-size: 100vw 100vh;
