--- a/less/style.less
+++ b/less/style.less
@@ -10,7 +10,7 @@
 
 // ============================= Global Styling ================================
 
-@import url(http://fonts.googleapis.com/css?family=Ubuntu:400,700);
+@import url(https://fonts.googleapis.com/css?family=Ubuntu:400,700);
 
 body {
   background-image: url('../img/colorPulse_V4.jpg');
